--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 
                 <button onclick="{app()}" ><span>Apps</span></button>
 
-
                 <button onclick="{home()}" >About</button>
                 
                 <button onclick="{home2()}" >Home</button>
 
- 
+                <a href="https://edzal1.vercel.app">
+                <button>Edzal</button>
+            </a>
         </div>
 
     </div>
